manifests/deploy-microservice.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    labels:
        app: david-solo-microservice
        stack: frontend
        source: demo
    name: david-solo-microservice
    namespace: microservices
spec:
    replicas: 3
    selector:
        matchLabels:
            run: david-solo-microservice
    template:
        metadata:
            labels:
                app: david-solo-microservice
                run: david-solo-microservice
                source: demo
        spec:
            containers:
                -   image: 219099013464.dkr.ecr.us-west-2.amazonaws.com/david-solo-microservice
                    name: david-solo-microservice
                    ports:
                        -   name: web
                            containerPort: 80
---

kind: Service
apiVersion: v1
metadata:
    labels:
        app: david-solo-microservice-service
    name: david-solo-microservice-service
    namespace: microservices
spec:
    selector:
        source: demo
        app: david-solo-microservice
    ports:
        -   name: web
            protocol: TCP
            port: 30201
            targetPort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: david-solo-ingress
    namespace: microservices
spec:
    rules:
        -   http:
                paths:
                    -   path: /david-solo
                        backend:
                            serviceName: david-solo-microservice-service
                            servicePort: 30201
